Adapt tests